Use a different method to read all bytes
* Java 8 compatible